--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,70 +1,139 @@
+@font-face {
+    font-family: the-dreamer;
+    src: url('../fonts/the-dreamer/THE_DREAM.otf');
+}
 body{
+	font-family: calibri, sans-serif ;
 	background-image:url(../images/bg.jpg);
 	background-repeat: no-repeat;
-	  background-size: cover;
-	  color:white;
-	  /* background-color: orange; */
-	  /* font-size: 20px; */
+	background-size: cover;
+	color:white;
+
+
 }
-#mainDiv {
-	/* background-image:url(../images/bg1.jpg); */
+.mainDiv {
+	
+	border:2px;
 	background-color:orange;
-	/* height:500px; */
 	width:60%;
-	/* height:450px; */
-	margin-right:auto;
-	margin-left:auto;
-	margin-top:100px;
+	height:450px;
+	margin:auto;
+	margin-top:60px;
+	padding:20px;
+	font-size:30px;
 	opacity:0.7;
-	font-size:10px;
 }
-#mainHeading{
-	background-color: orange;
+.mainHeading{
+	font-family:the-dreamer, calibri, sans-serif ;
+	text-align:center;
+	font-size:60px;
+	text-shadow: 7px 7px 7px red;
+}
+.subHeading{
+	text-align:center;
 }
 
-.panel1{
-	height: 250px; 
-	background-image:url(../images/business.jpg);
+.panel{
+	height: 250px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-size: 20px; 
-	/* opacity:0.7; */
-	
 }
-.panel2{
-	background-image:url(../images/travel.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 250px; 
-	font-size: 20px; 
-	/* opacity:0.7; */
-	
+
+.title{
+	font-size: 30px;
+	color:white;
+	text-shadow: 5px 5px 5px red;
+	margin-bottom:20px;
+	text-align:center;
 }
-.panel3{
-	background-image:url(../images/Olympic.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 250px; 
-	font-size: 20px; 
-	/* opacity:0.7; */
-	
+.displyQADiv{
+	padding:10px;
+	text-align:center;
+	font-size: 25px;
+	margin-left:20px;
 }
+.options{
+	text-align:center;
+	font-size: 30px;
+	font-weight:bold;
+	
+	/* margin-left:40px; */
+}
+.timeLeft{
+	/* padding:20px; */
+	font-size: 25px;
+	/* margin-left:20px; */
+	text-align:center;
+}
+
+
+
+/*  */
 .innerDiv{
-
-	
 	padding:20px;
 	opacity:0.5;
 	/* border:2px black ; */
 	background-color: black;
 	font-weight: bold;
+
 	
 }
 
-.panel1:hover , .panel2:hover ,.panel3:hover{
+/* .panel1:hover , .panel2:hover ,.panel3:hover{
     opacity:1;
    
+} */
+.rightWrong {
+	text-align:center;
+	font-size:40px;
+	color:#FFFAFA;
+	/* margin:20px 40px 40px 40px; */
+	text-shadow:1px 2px 4px black;
 }
-#category{
+.description {
+	text-align:center;
+	font-size:30px;
+	color:#FFFAFA;
+	margin:20px 40px 40px 40px;
+	text-shadow:1px 2px 4px black;
+}
+.resultDiv{
+	text-align:center;
+	font-size: 20px;
+	color:white;
+	cursor:pointer;
+}
+.result {
+	
+	font-size: 30px;
+	font-weight:bold;
+}
+
+.score{
+	/* text-align:center; */
+
+}
+.restartBtn {
+	text-align:center;
+	font-size:18px;
+	/* color:#FFFAFA; */
+	margin:20px ;
+	/* background-color:#696969; */
+	/* padding:15px; */
+	/* font-family: 'Cinzel Decorative', cursive; */
+}
+.newGameBtn {
+	text-align:center;
+	font-size:18px;
+	margin:20px ;
+	/* color:#FFFAFA; */
+	/* margin:10px 350px 0 350px; */
+	/* background-color:#696969; */
+	/* padding:15px; */
+	/* font-family: 'Cinzel Decorative', cursive; */
+}
+.category{
 
 	background-color:orange;
 	font-size: 15px;
@@ -75,38 +144,15 @@ body{
 	right:0;
 	text-align: center;
 }
-#nameLabel{
-	opacity:1;
-}
-.options{
-	margin:auto;
-	width:30%;
-	text-align:center;
-	/* background-color: grey; */
-	/* background: Transparent; */
-}
 
 .options:hover{  
-	/* border:2px solid rgb(155, 155, 62); */
     background-color: rgb(216, 143, 9);
 }
 
-.restartBtn {
-	text-align:center;
-	font-size:18px;
-	/* color:#FFFAFA; */
-	margin:20px ;
-	background-color:#696969;
-	padding:15px;
-	/* font-family: 'Cinzel Decorative', cursive; */
-}
-.newGameBtn {
-	text-align:center;
-	font-size:18px;
-	/* color:#FFFAFA; */
-	/* margin:10px 350px 0 350px; */
-	background-color:#696969;
-	padding:15px;
-	/* font-family: 'Cinzel Decorative', cursive; */
+
+#image{
+	height:180px;
+	width :380px;
+	margin-top:10px;
 }
 
