--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,27 +13,26 @@ body{
 }
 .mainDiv {
 	
-	border:2px;
-	/* background-color:grey; */
+	/* border:2px; */
 	width:60%;
 	height:500px;
 	margin:auto;
-	margin-top:60px;
+	margin-top:40px;
 	padding:20px;
 	font-size:30px;
-	opacity:0.5;
+	/* opacity:0.6; */
 }
 .mainHeading{
 	font-family:the-dreamer, calibri, sans-serif ;
-	/* background-color:grey;/ */
 	text-align:center;
 	font-size:80px;
-	text-shadow: 7px 7px 7px blue;
+	text-shadow: 7px 7px 7px teal;
 }
 .subHeading{
 	font-family:the-dreamer, calibri, sans-serif ;
 	text-align:center;
 	font-size:40px;
+	text-shadow: 5px 5px 5px teal;
 }
 
 .panel{
@@ -41,12 +40,9 @@ body{
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-size: 20px; 
-	/* opacity:0.8; */
+	opacity:0.7;
 }
 .panel:hover {
-	opacity:1;
-}
-.mainDiv:hover{
 	opacity:1;
 }
 
@@ -55,15 +51,17 @@ body{
 	text-align:center;
 	font-size: 28px;
 	margin-left:20px;
+	/* font-weight:bold; */
 }
 .options{
 	text-align:center;
 	font-size: 30px;
 	font-weight:bold;
+	margin:auto;
+	width:40%;
 
 }
 .timeLeft{
-	/* font-family:the-dreamer, calibri, sans-serif ; */
 	font-size: 25px;
 	text-align:center;
 }
@@ -74,18 +72,16 @@ body{
 	background-color: black;
 	font-weight: bold;
 	color:white;
+	cursor:pointer;
 }
 
 .rightWrong {
 	text-align:center;
 	font-size:40px;
-	/* color:black; */
-	/* text-shadow:1px 2px 4px black; */
 }
 .description {
 	text-align:center;
 	font-size:30px;
-	/* color:#FFFAFA; */
 	margin:20px 40px 40px 40px;
 	text-shadow:1px 2px 4px black;
 }
@@ -108,9 +104,9 @@ body{
 .restartBtn {
 	text-align:center;
 	font-size:22px;
-
+	background-color:teal;
 	margin:20px ;
-	background-color:Transparent;
+	/* background-color:Transparent; */
 	font-weight:bold;
 	
 }
@@ -118,7 +114,8 @@ body{
 	text-align:center;
 	font-size:22px;
 	margin:20px ;
-	background-color:Transparent;
+	background-color:teal;
+	/* background-color:Transparent; */
 	font-weight:bold;
 	
 }
@@ -135,9 +132,11 @@ body{
 }
 
 .options:hover{  
-    background-color: rgb(216, 143, 9);
+	/* background-color: grey; */
+	border:2px solid teal;
+	
+	
 }
-
 
 #image{
 	height:180px;
